# advent_of_code

./: .gitignore
2022/day01/src/: main.rs
2022/day02/src/: main.rs
2022/day03/src/: main.rs
2022/day04/src/: main.rs
2022/day05/src/: main.rs
2022/day06/src/: main.rs
2022/day07/src/: main.rs
2022/day08/src/: main.rs
2022/day09/src/: main.rs
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day12/src/: main.rs
2022/day13/src/: main.rs
2022/day14/src/: main.rs
2022/day15/src/: main.rs
2022/day16/: Cargo.toml
2022/day16/src/: main.rs
2023/: cargo.toml
2023/day00/: Cargo.toml
2023/day00/benches/: divan_benchmark.rs
2023/day00/src/: lib.rs  main.rs
2023/day01/: Cargo.toml
2023/day01/benches/: divan_benchmark.rs
2023/day01/src/: lib.rs  main.rs
2023/day02/: Cargo.toml
2023/day02/benches/: divan_benchmark.rs
2023/day02/src/: lib.rs  main.rs
2023/day03/: Cargo.toml
2023/day03/benches/: divan_benchmark.rs
2023/day03/src/: lib.rs  main.rs
2023/day04/: Cargo.toml
2023/day04/benches/: divan_benchmark.rs
2023/day04/src/: lib.rs  main.rs
2023/day05/: Cargo.toml
2023/day05/benches/: divan_benchmark.rs
2023/day05/src/: lib.rs  main.rs
2023/day06/: Cargo.toml
2023/day06/benches/: divan_benchmark.rs
2023/day06/src/: lib.rs  (+1 more)
2023/day07/: Cargo.toml
2023/day08/: Cargo.toml
2023/day09/: Cargo.toml
2023/day10/: Cargo.toml
2023/day11/: Cargo.toml
2023/day12/: Cargo.toml
2023/day13/: Cargo.toml
2023/day14/: Cargo.toml
2023/day15/: Cargo.toml
2023/day16/: Cargo.toml
2023/day16/benches/: divan_benchmark.rs
2023/day16/src/: lib.rs  main.rs
2023/day17/: Cargo.toml
2023/day17/benches/: divan_benchmark.rs
2023/day17/src/: lib.rs  main.rs
2023/day18/: Cargo.toml
2023/day19/: Cargo.toml
2023/day20/: Cargo.toml
2023/day20/benches/: divan_benchmark.rs
2023/day20/src/: lib.rs  main.rs
2023/day21/: Cargo.toml
common/src/: lib.rs
(+36 files in other folders)
