[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { workspace = true }
divan = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "day01"
path = "benches/divan_benchmark.rs"
harness = false
