[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { workspace = true }
divan = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
pathfinding = "4.6.0"

[[bench]]
name = "day17"
path = "benches/divan_benchmark.rs"
harness = false
